# seb_Atlantis

./: README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: tauri-release.yml
public/: sw.js
scripts/: generate-pwa-icons.mjs
src/: App.css  App.tsx  main.tsx  registerSW.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240613000000_initial.sql
src-tauri/src/: ai.rs  commands.rs  db.rs  fs.rs  lib.rs  main.rs  vps.rs
src/components/: AtlantisLogo.tsx  Layout.tsx  ModelSelector.tsx  ui.tsx
src/pages/: FilesPage.tsx  MemoryPage.tsx  RoomChatPage.tsx  SettingsPage.tsx  SkillsPage.tsx
src/stores/: fileStore.ts  memoryStore.ts  roomStore.ts  settingsStore.ts  skillStore.ts  voiceStore.ts
src/types/: index.ts
