[package]
name = "seb-atlantis"
version = "0.1.0"
description = "seb_Atlantis - AI Assistant Desktop App"
authors = ["Seb"]
edition = "2021"

[lib]
name = "seb_atlantis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
anyhow = "1"
once_cell = "1"
lazy_static = "1.4"
futures = "0.3"
log = "0.4"
rpassword = "7"
dirs = "5"
ssh2 = "0.9"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
